:bug: Align icons on buttons correctly

--- a/src/ui/Button/Button.css
+++ b/src/ui/Button/Button.css
@@ -1,6 +1,8 @@
 .button {
   display: flex;
-  place-content: center;
+  align-items: center;
+  justify-content: center;
+
   padding: var(--space-s);
   border-radius: var(--button-border-radius);
   background-color: var(--color-neutral-white);
